<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
          android:text="Fragment 3"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"/>