<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save_debt"
        android:icon="@drawable/ic_check_circle"
        app:showAsAction="always"
        android:title="Save">

    </item>
</menu>